--- a/Assets/_Code/Game.Core/Game.Core.asmdef
+++ b/Assets/_Code/Game.Core/Game.Core.asmdef
@@ -19,7 +19,8 @@
         "GUID:7a450cf7ca9694b5a8bfa3fd83ec635a",
         "GUID:e04e6c86a9f3947eb95fded39f9e60cc",
         "GUID:64dd21a71f05646a89405b0ade11289b",
-        "GUID:8819f35a0fc84499b990e90a4ca1911f"
+        "GUID:8819f35a0fc84499b990e90a4ca1911f",
+        "GUID:24003743127854c3e9252fea3e715626"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
