--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.cysharp.unitask": "2.2.5",
     "com.demigiant.dotween": "1.2.42",
     "com.unity.2d.sprite": "1.0.0",
+    "com.unity.2d.tilemap.extras": "1.7.0-preview",
     "com.unity.burst": "1.4.8",
     "com.unity.cinemachine": "2.7.3",
     "com.unity.collections": "0.15.0-preview.21",
