--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -36,7 +36,8 @@
     "com.unity.modules.unitywebrequestassetbundle": "1.0.0",
     "com.unity.modules.unitywebrequestaudio": "1.0.0",
     "com.unity.modules.unitywebrequesttexture": "1.0.0",
-    "com.unity.modules.unitywebrequestwww": "1.0.0"
+    "com.unity.modules.unitywebrequestwww": "1.0.0",
+    "com.colinbellino.plugins.pixelfonts": "https://github.com/colinbellino/unity-private-plugins.git?path=Assets/Plugins/PixelFonts/"
   },
   "scopedRegistries": [
     {
